--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,3 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/GameJamKIT")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/GameJamKIT")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/HedgeHog_Map1.HedgeHog_Map1
+GameDefaultMap=/Game/Levels/HedgeHog_Map1.HedgeHog_Map1
+
