--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,4 +13,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/HedgeHog_Map1.HedgeHog_Map1
 GameDefaultMap=/Game/Levels/HedgeHog_Map1.HedgeHog_Map1
+GlobalDefaultGameMode=/Game/BluePrint/Gamemode/Gm_Bp_hedgehog.Gm_Bp_hedgehog_C
 
